Fixed minor dora spacing issue

--- a/src/style.css
+++ b/src/style.css
@@ -302,7 +302,7 @@
 
 .match-status-display {
     display: flex;
-    align-items: stretch;
+    align-items: center;
     padding: 1vmin;
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 2vmin;
@@ -312,6 +312,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    align-self: stretch;
     margin-left: 2vmin;
     margin-right: 1vmin;
 }
